--- a/PersonalWebsiteDashboard/Website/wwwroot/css/VisualStudioBlog.css
+++ b/PersonalWebsiteDashboard/Website/wwwroot/css/VisualStudioBlog.css
@@ -25,6 +25,7 @@
     border-right-style: solid;
     border-color: grey;
     display: flex;
+    background-color: #141821;
 }
 
 .visualStudioBlog-header-close {
